--- a/components/footer.html
+++ b/components/footer.html
@@ -12,9 +12,9 @@
       <span class="footer-logo">ThemePark</span>
     </div>
     <div class="footer-center">
-      <a class="footer-link" href="../index.html" target="_parent">Home</a>
-      <a class="footer-link" href="../packages.html" target="_parent">Packages</a>
-      <a class="footer-link" href="../duplicate_1.html" target="_parent">Duplicate</a>
+      <!-- <a class="footer-link" href="../index.html" target="_parent">Home</a> -->
+      <!-- <a class="footer-link" href="../packages.html" target="_parent">Packages</a> -->
+      <!-- <a class="footer-link" href="../duplicate_1.html" target="_parent">Duplicate</a> -->
     </div>
     <div class="footer-right">
       <span>&copy; 2024 Theme Park. All rights reserved.</span>
