--- a/components/navbar.html
+++ b/components/navbar.html
@@ -14,7 +14,7 @@
     <div class="navbar-center">
       <a class="nav-link" href="../index.html" target="_parent">Home</a>
       <a class="nav-link" href="../packages.html" target="_parent">Packages</a>
-      <a class="nav-link" href="../duplicate_1.html" target="_parent">Duplicate Page</a>
+      <!-- <a class="nav-link" href="../duplicate_1.html" target="_parent">Duplicate Page</a> -->
     </div>
     <div class="navbar-right">
   <a href="https://facebook.com" target="_blank" class="navbar-social" title="Facebook" aria-label="Facebook">🌐</a>
