--- a/components/navbar.html
+++ b/components/navbar.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Navbar</title>
-  <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/navbar.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
   <nav class="navbar">
@@ -14,6 +14,7 @@
     <div class="navbar-center">
       <a class="nav-link" href="../index.html" target="_parent">Home</a>
       <a class="nav-link" href="../packages.html" target="_parent">Packages</a>
+      <a class="nav-link" href="../plan_your_visit.html" target="_parent">Plan Your Visit</a>
       <!-- <a class="nav-link" href="../duplicate_1.html" target="_parent">Duplicate Page</a> -->
     </div>
     <div class="navbar-right">
