--- a/components/navbar.html
+++ b/components/navbar.html
@@ -15,6 +15,7 @@
       <a class="nav-link" href="../index.html" target="_parent">Home</a>
       <a class="nav-link" href="../packages.html" target="_parent">Packages</a>
       <a class="nav-link" href="../plan_your_visit.html" target="_parent">Plan Your Visit</a>
+      <a class="nav-link" href="../ride.html" target="_parent">Ride</a>
       <!-- <a class="nav-link" href="../duplicate_1.html" target="_parent">Duplicate Page</a> -->
     </div>
     <div class="navbar-right">
