--- a/css/style.css
+++ b/css/style.css
@@ -413,7 +413,7 @@ body {
 .section-park .park-title {
     font-size: 40px;
     color: #fff;
-    background: linear-gradient(to right, #ff9a9e, #fad0c4);
+    background: linear-gradient(to right, #a29aff65, #c4faf3ab);
     padding: 15px 25px;
     border-radius: 20px;
     text-align: center;
