--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
    Theme & Base Styles
    ========================= */
 :root {
-  --primary-color:#1e3a8a;
+  --primary-color:#0c1733;
   --secondary-color: #fbbf24;
   --third-color: #f3f4f6;
 
