--- a/components/navbar.html
+++ b/components/navbar.html
@@ -13,9 +13,10 @@
     </div>
     <div class="navbar-center">
       <a class="nav-link" href="../index.html" target="_parent">Home</a>
-      <a class="nav-link" href="../packages.html" target="_parent">Packages</a>
-      <a class="nav-link" href="../plan_your_visit.html" target="_parent">Plan Your Visit</a>
       <a class="nav-link" href="../ride.html" target="_parent">Ride</a>
+      <a class="nav-link" href="../plan_your_visit.html" target="_parent">Plan Your Visit</a>
+      <a class="nav-link" href="../packages.html" target="_parent">Packages</a>
+      <a class="nav-link" href="../book.html" target="_parent">Book</a>
       <a class="nav-link" href="../contact.html" target="_parent">Contact</a>
       <!-- <a class="nav-link" href="../duplicate_1.html" target="_parent">Duplicate Page</a> -->
     </div>
